# develbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
configs/: config.example.toml  logger.toml
src/: auth.rs  bot.rs  config.rs  main.rs
src/commands/: core.rs  mod.rs  processor.rs
src/database/: mod.rs
src/database/entity/: chat_log_message.rs  chatter.rs  mod.rs
src/messages/: core.rs  mod.rs  processor.rs
src/messages/commands/: current_command.rs  hello_command.rs  mod.rs
